--- a/package.json
+++ b/package.json
@@ -14,23 +14,25 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.7.7",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
+    "@quasar/app-vite": "^1.9.0",
+    "@types/node": "^20.14.8",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
-    "vite-plugin-checker": "^0.8.0",
-    "vue-tsc": "^2.0.29",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.0.0",
-    "eslint-config-prettier": "^8.1.0",
-    "prettier": "^2.5.1",
-    "@types/node": "^20.14.8",
-    "@quasar/app-vite": "^1.9.0",
     "autoprefixer": "^10.4.2",
-    "typescript": "~5.5.4"
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "prettier": "^2.5.1",
+    "typescript": "~5.5.4",
+    "vite-plugin-checker": "^0.8.0",
+    "vue-tsc": "^2.0.29"
   },
   "engines": {
     "node": "^20 || ^18 || ^16",
