--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VUE_ROUTER_MODE=history
-QUASAR_API_BASE_URL=http://api.movie.test/api
+QUASAR_API_BASE_URL=https://movie-api-laravel-production.up.railway.app/api
